# Prompting-Gen-ai

./: pyproject.toml
src/: chat-1.py  main.py
src/controller/: AgentController.py
src/routes/: routes.py
src/service/: agent_service.py
src/utils/: testing.py
